--- a/style.css
+++ b/style.css
@@ -5,12 +5,21 @@ div.main {
 	max-width:1200px;
 	margin:auto;
 }
+div#header,
 div#footer {
 	position:absolute;
-	bottom:0;
 	background-color:black;
 	color:white;
 	height:50px;
 	max-width:inherit;
 	width:100%;
+}
+div#header {
+	top:0px;
+}
+div#footer {
+	bottom:0px;
+}
+div.main {
+	margin-top:50px;
 }
