--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 body {
 	margin:0;
 	height:100%;
-	overflow:hidden;
 }
 div.wrapper {
 	max-width:1200px;
@@ -20,6 +19,7 @@ div#footer {
 	height:50px;
 	max-width:inherit;
 	width:100%;
+	transition: height .5s;
 }
 div#header {
 	top:0px;
@@ -32,6 +32,7 @@ div#header {
 	float:left;
 	color:white;
 	cursor:default;
+	transition: padding .5s;
 }
 div.drewmcarthur:hover {
 	background-color:black;
@@ -39,7 +40,6 @@ div.drewmcarthur:hover {
 div#main {
 	height:76.4%;
 	padding:75px 10px;
-	overflow:scroll;
 }
 div#footer {
 	position:fixed;
@@ -50,10 +50,27 @@ img.footer-link {
 	padding:7px;
 	float:right;
 	cursor:default;
+	transition: height .5s, padding .5s;
 }
 img.footer-link:hover {
 	background-color:black;
 }
-.mini {
-	height:40px!important;
+
+/*
+ * when header/footer is mini, this applies
+ */
+
+div#header.mini,
+div#footer.mini {
+	height:30px;
 }
+
+div#header.mini div.drewmcarthur,
+div#footer.mini div.drewmcarthur {
+	padding:5px;	
+}
+
+div#header.mini img.footer-link,
+div#footer.mini img.footer-link {
+	height:20px;
+	padding:5px;
