added bigger font for phones

--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ div#main {
 	height:76.4%;
 	padding:75px 10px;
 }
+@media screen and (min-width:600px){
+	div#main {
+		font-size:15em;
+	}
+}
 div#footer {
 	position:fixed;
 	bottom:0px;
