--- a/social-icons.css
+++ b/social-icons.css
@@ -36,6 +36,9 @@ ul.social-icons {
 .fa-twitter:hover {
     color: #52a0fd;
 }
+.fa-snapchat-ghost:hover {
+    color: #FFEC00;
+}
 .fa-linkedin:hover {
     color: #0073a4;
 }
