--- a/style.css
+++ b/style.css
@@ -17,7 +17,21 @@ body {
   padding: 10%;
   max-width: 50em;
   margin: auto;
+  animation: fadein 1s cubic-bezier(0.12, 0.98, 0.38, 1);
 }
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    transform: translateY(-2em);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .main > div {
   margin: 0 0 .5em .5em;
 }
