--- a/style.css
+++ b/style.css
@@ -17,23 +17,10 @@ body {
   padding: 10%;
   max-width: 50em;
   margin: auto;
-  animation: fadein 1s cubic-bezier(0.12, 0.98, 0.38, 1);
 }
-
-@keyframes fadein {
-  from {
-    opacity: 0;
-    transform: translateY(-2em);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 .main > div {
   margin: 0 0 .5em .5em;
+  animation: fadeintop 1s cubic-bezier(0.12, 0.98, 0.38, 1);
 }
 a {
     text-decoration: none;
@@ -49,3 +36,29 @@ a:hover{
     background-size: contain;
   }
 }
+
+/* idea for fade in taken from https://malone.io */
+@keyframes fadeintop {
+  from {
+    opacity: 0;
+    transform: translateY(-2em);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeinside {
+  from {
+    opacity: 0;
+    transform: translateX(-4em);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
