--- a/style.css
+++ b/style.css
@@ -3,14 +3,28 @@
 	font-weight:300;
   font-size: 20px;
 }
-body {
+body, #tiny_bg {
 	margin: 0;
 	height: 100%;
+  -webkit-font-smoothing: antialiased;
+
   background-image: url('/assets/bg.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  -webkit-font-smoothing: antialiased;
+}
+#tiny_bg {
+  background-image: url('/assets/tiny_bg.jpg');
+
+  position: absolute;
+  height: 100vh; 
+  width: 100vw
+
+  filter: blur(2vw);
+  transform: scale(1.05);
+
+  will-change: transform, opacity;
+  animation: reveal 1s ease-out;
 }
 .main {
   width: 80%;
@@ -47,5 +61,13 @@ a:hover{
   to {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+@keyframes reveal {
+  0% {
+    transform: scale(1.05); opacity: 0;
+  }
+  100% {
+    transform: scale(1); opacity: 1;
   }
 }
