--- a/style.css
+++ b/style.css
@@ -1,30 +1,40 @@
 * {
 	font-family:'Lato','Ubuntu', sans-serif;
 	font-weight:300;
-  font-size: 20px;
-}
-body, #tiny_bg {
+  font-size: 20px; }
+body {
 	margin: 0;
-	height: 100%;
+  height: 100vh; 
+  width: 100vw;
   -webkit-font-smoothing: antialiased;
+}
+.bg_wrapper {
+  overflow: hidden;
+}
+#bg, #tiny_bg {
+  position: absolute;
+  height: 100vh; 
+  width: 100vw;
 
-  background-image: url('/assets/bg.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
+#bg {
+  background-image: url('/assets/bg.jpg');
+  z-index: -5;
+}
 #tiny_bg {
   background-image: url('/assets/tiny_bg.jpg');
 
-  position: absolute;
-  height: 100vh; 
-  width: 100vw
-
-  filter: blur(2vw);
-  transform: scale(1.05);
+  filter: blur(3vw);
+  transform: scale(1.15);
+  overflow: hidden;
+  z-index: -1;
+  opacity: 0;
 
   will-change: transform, opacity;
-  animation: reveal 1s ease-out;
+  animation: loaded .5s cubic-bezier(0.69, 0.48, 0.85, 0.63);
 }
 .main {
   width: 80%;
@@ -63,11 +73,13 @@ a:hover{
     transform: translateX(0);
   }
 }
-@keyframes reveal {
-  0% {
-    transform: scale(1.05); opacity: 0;
+@keyframes loaded {
+  from {
+    opacity: 1;
+    transform: scale(1.15);
   }
-  100% {
-    transform: scale(1); opacity: 1;
+  to {
+    opacity: 0;
+    transform: scale(1);
   }
 }
