--- a/style.css
+++ b/style.css
@@ -31,10 +31,13 @@ body {
   transform: scale(1.15);
   overflow: hidden;
   z-index: -1;
-  opacity: 0;
+  opacity: 1;
 
   will-change: transform, opacity;
+}
+#tiny_bg.faded {
   animation: loaded .5s cubic-bezier(0.69, 0.48, 0.85, 0.63);
+  opacity: 0;
 }
 .main {
   width: 80%;
