--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a:hover{
     text-decoration: underline;
 }
 @media (max-width: 720px){
-  body {
+  #bg {
     background-image: url('/assets/centered_bg.jpg');
     background-position: bottom;
     background-size: contain;
