--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   position: absolute;
   height: 100vh; 
   width: 100vw;
+  overflow: hidden;
 
   background-position: center;
   background-size: cover;
