--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ a {
 a:hover{
     text-decoration: underline;
 }
-@media (max-width: 720px){
+@media (max-aspect-ratio: 13/12){
   #bg, #tiny_bg {
     background-position: bottom;
     background-size: contain;
