--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   animation: fadein 1s cubic-bezier(0.12, 0.98, 0.38, 1);
 }
 .main > div {
-  margin: 0 0 .5em .5em;
+  margin: 0 0 .5em 4px;
 }
 a {
     text-decoration: none;
