--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a:hover{
   float: left;
   width: 30%;
   max-width: 50em;
-  min-width: 151px;
+  min-width: 258px;
   margin: 8% 0 0 11%;
   animation: fadein 1s cubic-bezier(0.12, 0.98, 0.38, 1);
 }
@@ -186,26 +186,26 @@ a.social-icon > i.fa-address-card {
   }
 }
 /* for collapsing the row of social icons into two */
-@media (max-width: 728px){
+@media (max-width: 732px) and (min-width: 551px) {
   .main {
     min-width: 151px;
   }
   ul.social-icons {
-    float: left;
+    float: none;
   }
 }
 /* for when the address card gets bumped to the next line */
-@media (max-width: 629px) and (min-width: 581px) {
+@media (max-width: 653px) and (min-width: 581px) {
   .vcard {
     margin-top: -12%;
   }
 }
-@media (max-width: 580px) and (min-width: 531px) {
+@media (max-width: 580px) and (min-width: 551px) {
   .vcard {
     margin-top: -6%;
   }
 }
-@media (max-width: 530px) {
+@media (max-width: 550px) {
   .main {
     width: 78%;
   }
