--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ a:hover{
 }
 #tiny_bg {
   background-image: url('/assets/tiny_bg.jpg');
-
   filter: blur(3vw);
+
   transform: scale(1.15);
   overflow: hidden;
   z-index: -1;
@@ -57,24 +57,29 @@ a:hover{
 
 /* main text */
 .main {
-  float: left;
   width: 33%;
   max-width: 50em;
   min-width: 258px;
   margin: 8% 0 0 11%;
+  float: left;
   animation: fadein 1s cubic-bezier(0.12, 0.98, 0.38, 1);
+}
+
+.main > div.name {
+  margin-left: 0.2em;
+  font-size: 1.4em;
 }
 
 /* contact card modal */
 .vcard {
-  float: left;
   width: 250px;
   padding: .7em;
   margin: 6% 5% 0 6%;
   border: 1px solid black;
   border-radius: 3px;
-  visibility: hidden;
+  float: left;
   position: relative;
+  visibility: hidden;
 }
 .vcard * {
   font-size: 20px;
@@ -118,8 +123,9 @@ a:hover{
 
 .vcard .dl-btn, 
 .vcard .x-btn {
-  transform: scale(0.5);
   text-align: center;
+  transform: scale(0.5);
+  transition: transform 0.1s ease-in-out;
 }
 .vcard .dl-btn:hover, 
 .vcard .x-btn:hover {
