adjusted name font size

--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ a:hover{
 }
 
 .main > div.name {
-  margin-left: 0.2em;
-  font-size: 1.4em;
+  margin-left: 0.1em;
+  font-size: 36px;
 }
 
 /* contact card modal */
