--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ a:hover{
   margin: 6% 5% 0 6%;
   border: 1px solid black;
   border-radius: 3px;
+  background-color: rgba(255,255,255,.4);
   float: left;
   position: relative;
   visibility: hidden;
