--- a/style.css
+++ b/style.css
@@ -131,9 +131,14 @@ a:hover{
 }
 .vcard .dl-btn svg path {
   transform: scale(.5,.5);
+  transition: color .1s ease-in-out;
 }
 .vcard .dl-btn:hover {
   transform: scale(1.1,1.1);
+}
+.vcard .dl-btn:hover svg path {
+  fill: #444;
+  stroke: #444;
 }
 
 /* social icon links */
@@ -150,7 +155,7 @@ ul.social-icons li {
 }
 a.social-icon > i {
   font-size: 24px;
-  color: #777;
+  color: #666;
   text-decoration: none;
   padding: 4px;
   width: 20px;
