--- a/style.css
+++ b/style.css
@@ -175,18 +175,18 @@ a.social-icon > i {
   padding: 4px 8px;
 } */
 #hoverbar {
-  display: none;
+  opacity: 0;
   width: 27px;
   border-bottom: 2.5px solid;
   border-radius: 2px;
   position: absolute;
   bottom: 0;
   transition: left;
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition: .5s;
+  -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
+  transition: .3s;
 }
 
 a.social-icon > i.fa-address-card {
