--- a/style.css
+++ b/style.css
@@ -155,12 +155,12 @@ ul.social-icons li {
   vertical-align: top;
   display: inline;
   height: 100px;
+  padding: 4px;
 }
 a.social-icon > i {
   font-size: 24px;
   color: #666;
   text-decoration: none;
-  padding: 4px;
   width: 20px;
   text-align: center;
   -o-transition:.5s;
@@ -194,11 +194,6 @@ a.social-icon > i.fa-address-card {
 }
 
 /* brand-specific coloring for icon links */
-.fa-address-card:hover,
-.fa-address-card.open {
-  color: #9e3416;
-  border-color: #9e3416;
-}
 .fa-facebook:hover {
   color: #4676dc;
   border-color: #4676dc;
@@ -215,17 +210,31 @@ a.social-icon > i.fa-address-card {
   color: #FFEC00;
   border-color: #FFEC00;
 }
+ul.social-icons li.venmo {
+  padding-left: 3px;
+}
 .fa-vimeo:hover {
   color: #3D95CE;
   border-color: #3D95CE;
+}
+ul.social-icons li.linkedin {
+  padding-left: 6px;
 }
 .fa-linkedin:hover {
   color: #0073a4;
   border-color: #0073a4;
 }
-.fa-github:hover{
+ul.social-icons li.gitlab {
+  padding-left: 3px;
+}
+.fa-gitlab:hover{
   color: #000;
   border-color: #000;
+}
+.fa-address-card:hover,
+.fa-address-card.open {
+  color: #9e3416;
+  border-color: #9e3416;
 }
 
 /* when the screen is more horizontal than vertical,
