--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ a:hover{
 #bg {
   background-image: url('/assets/bg.jpg');
   z-index: -5;
+  transition: bottom 0.5s;
+}
+#tiny_bg.bumped, #bg.bumped {
+  bottom: 5em;
 }
 #tiny_bg {
   background-image: url('/assets/tiny_bg.jpg');
@@ -69,6 +73,80 @@ a:hover{
 .main > div.name {
   margin-left: .1em;
   font-size: 36px;
+}
+
+/* my apps links */
+#proj-arrow {
+  position: fixed;
+  left: 35%;
+  bottom: 1em;
+  transition: bottom 0.5s;
+
+  width: 30%;
+  max-width: 300px;
+  height: 5em;
+
+  cursor: pointer;
+}
+#proj-arrow.bumped {
+  bottom: 6em;
+}
+#proj-arrow > p.top {
+  text-align: center;
+  margin-bottom: -0.6em;
+  font-size: 1.1em;
+  color: rgb(113, 131, 193);
+  transition: color 0.1s;
+}
+#proj-arrow > .arrow {
+  background-color:rgb(116, 122, 161); 
+  transition: background-color 0.1s;
+  height: .2em;
+  border-radius: .3em;
+  display: inline-flex;
+  width: 48%;
+}
+#proj-arrow > .arrow.left {
+  transform: rotate(12deg);
+  margin-right: -0.25em;
+  margin-left: 0.35em;
+}
+#proj-arrow > .arrow.right {
+  transform: rotate(-12deg);
+  margin-left: -0.25em;
+}
+#proj-arrow:hover > p.top {
+  color: rgb(200,200,200);
+}
+#proj-arrow:hover > .arrow {
+  background-color: rgb(200,200,200);
+}
+
+/* apps */
+#apps {
+  width: 80%;
+  z-index: -10;
+  position: fixed;
+  bottom: 0;
+  height: 5em;
+  display: block;
+  margin: 0 10%;
+}
+div.app {
+  width: 5em;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+}
+#apps img {
+  height: 3em;
+  border-radius: .5em;
+  margin-top: .35em;
+}
+div.app > a > p {
+  margin: 0;
+  margin-top: -0.3em;
+  font-size: 0.8em;
 }
 
 /* contact card modal */
@@ -252,6 +330,21 @@ ul.social-icons li.gitlab {
   }
   #tiny_bg.faded {
     transform: scale(1);
+  }
+}
+@media only screen and (max-width: 380px) {
+  /* use this to guess if it's mobile */
+  #tiny_bg, #bg{
+    bottom: 5em;
+  }
+  #tiny_bg.bumped, #bg.bumped {
+    bottom: 10em;
+  }
+  #proj-arrow {
+    bottom: 0;
+  }
+  #proj-arrow.bumped {
+    bottom: 5em;
   }
 }
 /* handle positioning of contact card */
