add app button rotation on click

--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ a:hover{
 #bg {
   background-image: url('/assets/bg.jpg');
   z-index: -5;
-  transition: bottom 0.5s;
+  -webkit-transition: bottom 0.5s;
+          transition: bottom 0.5s;
 }
 #tiny_bg.bumped, #bg.bumped {
   bottom: 5em;
@@ -88,9 +89,6 @@ a:hover{
 
   cursor: pointer;
 }
-#proj-arrow.bumped {
-  bottom: 6em;
-}
 #proj-arrow > p.top {
   text-align: center;
   margin-bottom: -0.6em;
@@ -100,7 +98,10 @@ a:hover{
 }
 #proj-arrow > .arrow {
   background-color:rgb(116, 122, 161); 
-  transition: background-color 0.1s;
+  -webkit-transition: background-color 0.1s;
+          transition: background-color 0.1s;
+  -webkit-transition: -webkit-transform 0.1s;
+          transition:         transform 0.1s;
   height: .2em;
   border-radius: .3em;
   display: inline-flex;
@@ -115,11 +116,27 @@ a:hover{
   transform: rotate(-12deg);
   margin-left: -0.25em;
 }
+  /* hovering */
 #proj-arrow:hover > p.top {
   color: rgb(200,200,200);
+  opacity: 1;
+  transition: opacity .1s;
 }
 #proj-arrow:hover > .arrow {
   background-color: rgb(200,200,200);
+}
+/* bumped */
+#proj-arrow.bumped {
+  bottom: 6em;
+}
+#proj-arrow.bumped > p.top {
+  opacity: 0;
+}
+#proj-arrow.bumped > .arrow.left {
+  transform: rotate(-12deg);
+}
+#proj-arrow.bumped > .arrow.right {
+  transform: rotate(12deg);
 }
 
 /* apps */
