--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   height: 100vh; 
   width: 100vw;
   position: fixed;
+  background-color: aliceblue;
   -webkit-font-smoothing: antialiased;
 }
 a {
@@ -37,10 +38,10 @@ a:hover{
 #bg {
   background-image: url('/assets/bg.jpg');
   z-index: -5;
-       -o-transition: bottom 0.5s;
-     -moz-transition: bottom 0.5s;
-  -webkit-transition: bottom 0.5s;
-          transition: bottom 0.5s;
+       -o-transition: all 0.5s;
+     -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+          transition: all 0.5s;
 }
 #tiny_bg.bumped, #bg.bumped {
   bottom: 5em;
